--- a/SMS.Web/Views/BringIn/FSTApprove.cshtml
+++ b/SMS.Web/Views/BringIn/FSTApprove.cshtml
@@ -15,12 +15,12 @@
         <div class="col-2 input-group input-group-sm">
             <label class="no-margin-bottom" style="padding-top: 5px">Từ ngày</label>
             &nbsp;
-            <input id="date_from" class="form-control bg-light from-date">
+            <input id="date_from" class="form-control bg-light from-date" autocomplete="off">
         </div>
         <div class="col-2 input-group input-group-sm">
             <label class="no-margin-bottom" style="padding-top: 5px">Đến ngày</label>
             &nbsp;
-            <input id="date_to" class="form-control bg-light to-date">
+            <input id="date_to" class="form-control bg-light to-date" autocomplete="off">
         </div>
         <div class="col-2 input-group input-group-sm">
             <label class="no-margin-bottom" style="padding-top: 5px">Phòng ban</label>
