--- a/SMS.Web/Views/BringOut/Edit.cshtml
+++ b/SMS.Web/Views/BringOut/Edit.cshtml
@@ -34,7 +34,7 @@
             <div class="form-group input-group specific-date-pick">
                 <label class="col-2 top-space" for="EstimatedDate">Ngày đăng ký <span class="red">(*)</span></label>
                 <div class="col-3 input-group-sm">
-                    <input class="form-control input-previous-button datepicker" id="estimated_date" placeholder="Ngày" value="@Model.EstimatedDate" readonly style="background:white" />
+                    <input class="form-control input-previous-button datepicker" id="estimated_date" placeholder="Ngày" value="@Model.EstimatedDate" autocomplete="off" />
                 </div>
                 <label class="top-space" for="EstimatedTime">Giờ đăng ký <span class="red">(*)</span></label>
                 <div class="col-2 input-group-sm">
@@ -112,10 +112,10 @@
                                 <input class="form-control input-previous-button serial" value="@item.Serial" />
                             </td>
                             <td class="input-group-sm">
-                                <input type="number" class="form-control input-previous-button quantity" value="@item.Quantity" />
+                                <input type="number" class="form-control input-previous-button quantity" value="@item.Quantity" min="0" />
                             </td>
                             <td class="input-group-sm">
-                                <input class="form-control input-previous-button unit" value="@item.Unit" />
+                                <input class="form-control input-previous-button unit" value="@item.Unit" maxlength="50" />
                             </td>
                             <td class="input-group-sm">
                                 <select class="form-control input-previous-button assetType">
@@ -146,7 +146,7 @@
                                 </select>
                             </td>
                             <td class="input-group-sm">
-                                <input class="form-control datepicker returnDate" placeholder="Ngày" value="@item.ReturnDate" readonly style="background:white" />
+                                <input class="form-control datepicker returnDate" placeholder="Ngày" value="@item.ReturnDate" autocomplete="off" />
                             </td>
                             <td class="input-group-sm">
                                 <input class="form-control timepicker returnTime" placeholder="Giờ" value="@item.ReturnTime" type="time" />
@@ -182,7 +182,7 @@
                                         <input class="form-control input-previous-button serial" />
                                     </td>
                                     <td class="input-group-sm">
-                                        <input type="number" class="form-control input-previous-button quantity" />
+                                        <input type="number" class="form-control input-previous-button quantity" min="0" />
                                     </td>
                                     <td class="input-group-sm">
                                         <input class="form-control input-previous-button unit" />
@@ -201,7 +201,7 @@
                                         </select>
                                     </td>
                                     <td class="input-group-sm">
-                                        <input class="form-control datepicker returnDate" placeholder="Ngày" readonly style="background:white" />
+                                        <input class="form-control datepicker returnDate" placeholder="Ngày" autocomplete="off" />
                                     </td>
                                     <td class="input-group-sm">
                                         <input class="form-control timepicker returnTime" placeholder="Giờ" type="time" />
