--- a/SMS.Web/Views/BringOut/History.cshtml
+++ b/SMS.Web/Views/BringOut/History.cshtml
@@ -23,12 +23,12 @@
         <div class="col-2 input-group input-group-sm">
             <label class="no-margin-bottom" style="padding-top: 5px">Từ ngày</label>
             &nbsp;
-            <input id="date_from" class="form-control bg-light from-date" readonly>
+            <input id="date_from" class="form-control bg-light from-date" autocomplete="off">
         </div>
         <div class="col-2 input-group input-group-sm">
             <label class="no-margin-bottom" style="padding-top: 5px">Đến ngày</label>
             &nbsp;
-            <input id="date_to" class="form-control bg-light to-date" readonly>
+            <input id="date_to" class="form-control bg-light to-date" autocomplete="off">
         </div>
         <div class="col-2 input-group input-group-sm">
             <label class="no-margin-bottom" style="padding-top: 5px">Phòng ban</label>
@@ -39,16 +39,6 @@
             <label class="no-margin-bottom" style="padding-top: 5px">Mã nhân viên</label>
             &nbsp;
             <input id="emp_code" class="form-control bg-light to-date">
-        </div>
-        <div class="col-2 input-group input-group-sm">
-            <label class="no-margin-bottom" style="padding-top: 5px">Ca làm việc</label>
-            &nbsp;
-            <select class="form-control from-date">
-                <option value="0">Hành chính</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-            </select>
         </div>
         <div class="col-2">
             <button class="btn btn-sm btn-primary" id="btn-search"><i class="fas fa-search"></i> Tìm kiếm</button>
