--- a/SMS.Web/Views/BringIn/Create.cshtml
+++ b/SMS.Web/Views/BringIn/Create.cshtml
@@ -33,7 +33,7 @@
             <div class="form-group input-group specific-date-pick">
                 <label class="col-2 top-space" for="EstimatedDate">Ngày đăng ký <span class="red">(*)</span></label>
                 <div class="col-3 input-group-sm">
-                    <input style="background: white" class="form-control input-previous-button datepicker" id="estimated_date" placeholder="Ngày" readonly />
+                    <input style="background: white" class="form-control input-previous-button datepicker" id="estimated_date" placeholder="Ngày" autocomplete="off" />
                 </div>
                 <label class="top-space" for="EstimatedTime">Giờ đăng ký <span class="red">(*)</span></label>
                 <div class="col-2 input-group-sm">
@@ -105,7 +105,7 @@
                             <input class="form-control input-previous-button serial" />
                         </td>
                         <td class="input-group-sm">
-                            <input type="number" class="form-control input-previous-button quantity" />
+                            <input type="number" class="form-control input-previous-button quantity" min="0"/>
                         </td>
                         <td class="input-group-sm">
                             <input class="form-control input-previous-button unit" maxlength="50" />
@@ -124,7 +124,7 @@
                             </select>
                         </td>
                         <td class="input-group-sm">
-                            <input class="form-control datepicker returnDate" placeholder="Ngày" readonly style="background:white"/>
+                            <input class="form-control datepicker returnDate" placeholder="Ngày" autocomplete="off" />
                         </td>
                         <td class="input-group-sm">
                             <input class="form-control timepicker returnTime" placeholder="Giờ" type="time" />
@@ -165,10 +165,10 @@
                                         <input class="form-control input-previous-button serial" />
                                     </td>
                                     <td class="input-group-sm">
-                                        <input type="number" class="form-control input-previous-button quantity" />
+                                        <input type="number" class="form-control input-previous-button quantity" min="0" />
                                     </td>
                                     <td class="input-group-sm">
-                                        <input class="form-control input-previous-button unit" />
+                                        <input class="form-control input-previous-button unit" maxlength="50" />
                                     </td>
                                     <td class="input-group-sm">
                                         <select class="form-control input-previous-button assetType">
@@ -184,7 +184,7 @@
                                         </select>
                                     </td>
                                     <td class="input-group-sm">
-                                        <input class="form-control datepicker returnDate" placeholder="Ngày" readonly style="background:white" />
+                                        <input class="form-control datepicker returnDate" placeholder="Ngày" autocomplete="off" />
                                     </td>
                                     <td class="input-group-sm">
                                         <input class="form-control timepicker returnTime" placeholder="Giờ" type="time" />
@@ -195,34 +195,15 @@
             $('.datepicker, #estimated_date, .returnDate').datepicker({
                 dateFormat: 'dd/mm/yy'
             });
-            //$('.timepicker').timepicker({
-            //    timeFormat: 'h:mm p',
-            //    interval: 5,
-            //    startTime: '00:00',
-            //    dynamic: false,
-            //    dropdown: true,
-            //    scrollbar: true
-            //});
         });
 
         $('.datepicker, #estimated_date, .returnDate').datepicker({
             dateFormat: 'dd/mm/yy'
         });
 
-        //$('#estimated_date').datepicker().datepicker("setDate", new Date());
-
         $("#BI-items").on("click", ".delete-items", function () {
             $(this).closest(".row-items").remove();
         });
-
-        //$('.timepicker').timepicker({
-        //    timeFormat: 'h:mm p',
-        //    interval: 5,
-        //    startTime: '00:00',
-        //    dynamic: false,
-        //    dropdown: true,
-        //    scrollbar: true
-        //});
 
         $('#txtEmpCodeBI').keyup(function () {
             var count = $('#txtEmpCodeBI').val().length;
