--- a/SMS.Web/Views/BringIn/ITTApprove.cshtml
+++ b/SMS.Web/Views/BringIn/ITTApprove.cshtml
@@ -9,18 +9,18 @@
 }
 <div style="width:100%">
     <div class="card-header">
-        <h5 class="m-0 font-weight-bold text-primary">PHÒNG ITT & SMT PHÊ DUYỆT MANG HÀNG VÀO</h5>
+        <h5 class="m-0 font-weight-bold text-primary">PHÒNG SMT PHÊ DUYỆT MANG HÀNG VÀO</h5>
     </div>
     <div class="row dataTables_wrapper dt-bootstrap4 above-table">
         <div class="col-2 input-group input-group-sm">
             <label class="no-margin-bottom" style="padding-top: 5px">Từ ngày</label>
             &nbsp;
-            <input id="date_from" class="form-control bg-light from-date" readonly>
+            <input id="date_from" class="form-control bg-light from-date" autocomplete="off">
         </div>
         <div class="col-2 input-group input-group-sm">
             <label class="no-margin-bottom" style="padding-top: 5px">Đến ngày</label>
             &nbsp;
-            <input id="date_to" class="form-control bg-light to-date" readonly>
+            <input id="date_to" class="form-control bg-light to-date" autocomplete="off">
         </div>
         <div class="col-2 input-group input-group-sm">
             <label class="no-margin-bottom" style="padding-top: 5px">Phòng ban</label>
