--- a/SMS.Web/Views/LeaveEarly/Approve.cshtml
+++ b/SMS.Web/Views/LeaveEarly/Approve.cshtml
@@ -29,13 +29,13 @@
             <div class="col-2 input-group input-group-sm">
                 <label class="no-margin-bottom" style="padding-top: 5px">Từ ngày</label>
                 &nbsp;
-                <input id="date_from" class="form-control bg-light from-date" readonly>
+                <input id="date_from" class="form-control bg-light from-date" autocomplete="off">
                 <input id="hidden_date_from" readonly type="hidden" value="@Model.from">
             </div>
             <div class="col-2 input-group input-group-sm">
                 <label class="no-margin-bottom" style="padding-top: 5px">Đến ngày</label>
                 &nbsp;
-                <input id="date_to" class="form-control bg-light to-date" readonly>
+                <input id="date_to" class="form-control bg-light to-date" autocomplete="off">
                 <input id="hidden_date_to" readonly type="hidden" value="@Model.to">
             </div>
             <div class="col-2 input-group input-group-sm">
@@ -147,7 +147,7 @@
                         @Html.DisplayFor(modelItem => item.Reason)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.EstimatedDate)
+                        @Html.DisplayFor(modelItem => item.EstimatedDate) @Html.DisplayFor(modelItem => item.EstimatedTime)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.CreatedBy)
