--- a/SMS.Web/Views/LeaveEarly/Create.cshtml
+++ b/SMS.Web/Views/LeaveEarly/Create.cshtml
@@ -90,7 +90,7 @@
                     <div class="form-group input-group specific-date-pick">
                         <label class="col-2 top-space" for="EstimatedDate">Ngày đăng ký <span class="red">(*)</span></label>
                         <div class="col-3 input-group-sm">
-                            @Html.EditorFor(model => model.EstimatedDate, new { htmlAttributes = new { @id = "estimated_date", @class = "form-control input-previous-button", @readonly = "readonly", @style = "background-color: white" } })
+                            @Html.EditorFor(model => model.EstimatedDate, new { htmlAttributes = new { @id = "estimated_date", @class = "form-control input-previous-button", @style = "background-color: white", autocomplete = "off" } })
 
                         </div>
                         <label class="top-space" for="EstimatedTime">Giờ đăng ký <span class="red">(*)</span></label>
