--- a/SMS.Web/Views/LeaveEarly/Edit.cshtml
+++ b/SMS.Web/Views/LeaveEarly/Edit.cshtml
@@ -91,7 +91,7 @@
                     <div class="form-group input-group specific-date-pick">
                         <label class="col-2 top-space" for="EstimatedDate">Ngày đăng ký <span class="red">(*)</span></label>
                         <div class="col-3 input-group-sm">
-                            @Html.EditorFor(model => model.EstimatedDate, new { htmlAttributes = new { @id = "estimated_date", @class = "form-control input-previous-button", @readonly = "readonly", @style = "background-color: white" } })
+                            @Html.EditorFor(model => model.EstimatedDate, new { htmlAttributes = new { @id = "estimated_date", @class = "form-control input-previous-button", autocomplete = "off", @style = "background-color: white" } })
                         </div>
                         <label class="top-space" for="EstimatedTime">Giờ đăng ký <span class="red">(*)</span></label>
                         <div class="col-2 input-group-sm">
@@ -174,12 +174,12 @@
                         if (reponse.status) {
                             $('#txtFullNameLE').val(reponse.data.FullName);
                             $('#txtPositionLE').val(reponse.data.Position);
-                            $('#txtTeamLE').val(reponse.data.Team);
+                            $('#txtTeamLE').val(reponse.data.Team.Name);
                         } else {
                             alert("Mã nhân viên không tồn tại");
                             $('#txtFullNameLE').val("");
                             $('#txtPositionLE').val(reponse.data.Position);
-                            $('#txtTeamLE').val(reponse.data.Team);
+                            $('#txtTeamLE').val(reponse.data.Team.Name);
                             console.log(reponse.data.data);
                         }
                     },
