--- a/SMS.Web/Views/LeaveEarly/History.cshtml
+++ b/SMS.Web/Views/LeaveEarly/History.cshtml
@@ -29,12 +29,12 @@
             <div class="col-2 input-group input-group-sm">
                 <label class="no-margin-bottom" style="padding-top: 5px">Từ ngày</label>
                 &nbsp;
-                <input id="date_from" class="form-control bg-light from-date" readonly>
+                <input id="date_from" class="form-control bg-light from-date" autocomplete="off">
             </div>
             <div class="col-2 input-group input-group-sm">
                 <label class="no-margin-bottom" style="padding-top: 5px">Đến ngày</label>
                 &nbsp;
-                <input id="date_to" class="form-control bg-light to-date" readonly>
+                <input id="date_to" class="form-control bg-light to-date" autocomplete="off">
             </div>
             <div class="col-2 input-group input-group-sm">
                 <label class="no-margin-bottom" style="padding-top: 5px">Phòng ban</label>
@@ -155,7 +155,7 @@
                         <td class="col-sticky-10">
                             @if (item.CreatedDate != null)
                             {
-                                @Html.DisplayFor(modelItem => item.CreatedDate.Value)
+                                @Html.DisplayFor(modelItem => item.CreatedDate)
                             }
                         </td>
                         <td class="col-sticky-11" style="text-align: left">
