--- a/SMS.Web/Views/LeaveEarly/LEReport.cshtml
+++ b/SMS.Web/Views/LeaveEarly/LEReport.cshtml
@@ -122,7 +122,7 @@
                                 }
                                 else if (Model.ApprovedStatus == 0)
                                 {
-                                    <i class="fas fa-times-circle" style="color: red"></i>
+                                    <i class="fas fa-times" style="color: red"></i>
                                 }
                                 <br />@Html.DisplayFor(model => model.ApprovedBy)<br />@Html.DisplayFor(model => model.ApprovedDate)
                             </b>
@@ -135,7 +135,7 @@
                                 }
                                 else if (Model.GuardStatus == 0)
                                 {
-                                    <i class="fa-xs fa-times" style="color: red"></i>
+                                    <i class="fas fa-times" style="color: red"></i>
                                 }
                                 <br />@Html.DisplayFor(model => model.Guard)<br />@Html.DisplayFor(model => model.GuardDate)
                             </b>
